# GLEngine

./: .gitignore  .travis.yml  CMakeLists.txt  CMakelists.txt  README.md  appveyor.yml  travis.yml
GameEngine/: DebugProps.props  GameEngine.sln  ReleaseProps.props
GameEngine/GameEngine/: Camera.cpp  Camera.hpp  Clock.cpp  Clock.hpp  GLSLProgram.cpp  GLTexture.hpp  GameContext.cpp  GameContext.hpp  GameEngine.cpp  GameEngine.hpp  GameEngine.vcxproj  GameEngine.vcxproj.filters  ImageLoader.hpp  InputManager.hpp  ParticleBatch2D.cpp  ParticleBatch2D.hpp  ParticleEngine.cpp  ParticleEngine2D.hpp  PicoPNG.hpp  ResourceManager.cpp  ResourceManager.hpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  SpriteFont.cpp  SpriteFont.hpp  TextureManager.cpp  TextureManager.hpp  Time.cpp  Time.hpp  Timing.cpp  Timing.hpp  Window.cpp
GameEngine/GameEngine/Private/: AudioEngineWrapper.cpp  AudioEngineWrapper.hpp  Utility.cpp  Utility.hpp
GameEngine/TestApp/: Agent.cpp  Agent.h  Bullet.cpp  Bullet.h  Game.cpp  Game.hpp  Gun.cpp  Gun.h  Human.cpp  Human.h  Level.cpp  Level.h  MainGame.cpp  MainGame.h  Player.cpp  Player.h  TestApp.vcxproj  TestApp.vcxproj.filters  Zombie.cpp  Zombie.h  main.cpp
cmake/: HunterGate.cmake
src/: AudioEngineWrapper.cpp  AudioManager.cpp  CMakeLists.txt  CMakelists.txt  Camera.cpp  Clock.cpp  GLSLProgram.cpp  Game.cpp  GameContext.cpp  GameEngine.cpp  InputManager.cpp  ParticleEngine.cpp  ResourceManager.cpp  SpriteBatch.cpp  SpriteFont.cpp  TextureManager.cpp  Utility.cpp  Window.cpp
src/include/: AudioEngineWrapper.hpp  AudioManager.hpp  Clock.hpp  GLSLProgram.hpp  Game.hpp  GameContext.hpp  GameEngine.hpp  ImageLoader.hpp  InputManager.hpp  ParticleEngine2D.hpp  PicoPNG.hpp  ResourceManager.hpp  Sprite.hpp  SpriteFont.hpp  TextureManager.hpp  Vertex.hpp  Window.hpp
test_game/: Animation.hpp  CMakeLists.txt  CMakelists.txt  Enemy.hpp  Game.cpp  Game.hpp  ParallaxingBackground.hpp  Player.hpp  Projectile.cpp  Projectile.hpp  TestGame.cpp  TestGame.hpp  TileSheet.cpp  TileSheet.hpp  main.cpp
